--- a/basline/baseline.html
+++ b/basline/baseline.html
@@ -93,21 +93,32 @@
 
     <!--HEM PAGE-->
     <div id="hem" class="page">
-      <h1>Vårdkompassen</h1>
+      <div class="text-zoom">
+        <button class="btniconbig" onclick="makeTextLarger()">
+          <img src="icons/zoom_in_24dp_FFF_FILL0_wght400_GRAD0_opsz24.svg" ></button>
+        <button class="btniconsmall" onclick="makeTextSmaller()">
+          <img src="icons/zoom_out_24dp_FFF_FILL0_wght400_GRAD0_opsz24.svg" ></button>
+      </div>
+      <h1 class="hemText">Välkommen till Vårdkompassen</h1>
+    
+      <h2>Just nu är det pollen-säsong</h2>
 
       <div class="hem">
-        <div class="texthem">
-          <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus corrupti ab rerum, a sequi voluptas fugiat nam quis sit harum fuga qui nihil voluptatibus soluta explicabo porro quae beatae vitae.</h2>
-        </div>
+        <div id="infoBox" class="text-box">
+          Våren är här, och med den kommer också den årliga pollenallergin. Många upplever just nu besvär som rinnande näsa, kliande ögon, nysningar och trötthet – typiska symptom på allergi mot björk- eller gräspollen. Pollenhalterna är redan höga i stora delar av landet, särskilt under soliga, torra och blåsiga dagar.
+          För allergiker kan det kännas som att ha en ständig förkylning, vilket påverkar både koncentration och sömn. Det finns dock hjälp att få. Receptfria läkemedel som antihistaminer, nässprayer och ögondroppar kan lindra symtomen. För den som är extra känslig kan läkare skriva ut starkare behandling eller föreslå allergivaccination.
+          För att minska besvären rekommenderas att du:
+          Undviker att vädra på morgonen när pollennivåerna är som högst
       </div>
     </div>
 
     <!--BOKA TID PAGE-->
     <div id="bokatid" class="page">
       <h1>Boka Tid</h1>
-      <div class="text">
-        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus corrupti ab rerum, a sequi voluptas fugiat nam quis sit harum fuga qui nihil voluptatibus soluta explicabo porro quae beatae vitae.</h2>
-      </div>
+      <div id="infoBox" class="text-box">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus corrupti ab rerum, a sequi voluptas fugiat nam quis sit harum fuga qui nihil voluptatibus soluta explicabo porro quae beatae vitae.
+      <!-- Knapp -->
+      <button onclick="makeTextLarger()">Öka textstorlek</button>
     </div>
 
     <!--BOKNINGAR PAGE-->
@@ -226,6 +237,16 @@
             }
         });
       });
+
+      function makeTextLarger() {
+        const box = document.getElementById("infoBox");
+        box.style.fontSize = "30px";
+      }
+
+      function makeTextSmaller() {
+        const box = document.getElementById("infoBox");
+        box.style.fontSize = "15px";
+      }
          
     </script>
 
