gjort klart alpine

--- a/basline/baseline.html
+++ b/basline/baseline.html
@@ -133,10 +133,29 @@
           När du har bokat får du en bekräftelse direkt, oftast via e-post eller sms. Du kan även logga in igen senare för att ändra eller avboka tiden om det skulle behövas.
           Digital bokning sparar tid och ger dig större frihet att hantera din vård – när det passar dig bäst.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     
-
+    <!--BOKNINGAR PAGE-->
+    <div id="bokningar" class="page">
+      <div class="text-zoom">
+        <button class="btniconbig" onclick="makeTextLarger()">
+          <img src="icons/zoom_in_24dp_FFF_FILL0_wght400_GRAD0_opsz24.svg" ></button>
+        <button class="btniconsmall" onclick="makeTextSmaller()">
+          <img src="icons/zoom_out_24dp_FFF_FILL0_wght400_GRAD0_opsz24.svg" ></button>
+      </div>
+      <h1 class="hemText">Bokningar</h1>
+      <h2>Hur går bokningar till?</h2>
+      <div class="hem">
+        <div class="infoBox text-box">
+          Att boka en tid på Vårdkompassen är enkelt och smidigt. Du börjar med att logga in med BankID för att bekräfta din identitet. När du är inloggad väljer du vilken typ av besök du behöver – det kan vara ett fysiskt besök, ett videosamtal eller en rådgivning.
+          Du får sedan upp lediga tider att välja mellan och kan boka den som passar dig bäst. När bokningen är klar får du en bekräftelse direkt via e-post eller sms. Skulle du behöva ändra eller avboka din tid gör du det enkelt genom att logga in igen.      
+          Med Vårdkompassen har du full kontroll över dina bokningar – snabbt, tryggt och på dina villkor.
+        </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
+      </div>
+    </div>
     <!--BOKNINGAR PAGE se bokade tider-->
     <div id="sebokadetider" class="page">
       <div class="text-zoom">
@@ -153,6 +172,7 @@
           Om du nyligen har gjort en bokning kan det ta några minuter innan den visas här.
           Tveka inte att kontakta oss på Vårdkompassen om du behöver hjälp.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     <!--BOKNINGAR PAGE avboka tid-->
@@ -165,7 +185,6 @@
       </div>
       <h1 class="hemText">Vill du avboka en tid?</h1>
       <h2>Just nu har du inga tider att avboka</h2>
-
       <div class="hem">
         <div class="infoBox text-box">
           Så avbokar du din tid hos Vårdkompassen<br>
@@ -178,6 +197,7 @@
           Efter avbokningen får du en bekräftelse via sms eller e-post.<br>
           Tänk på att avboka i god tid, så att tiden kan erbjudas till någon annan.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     <!--BOKNINGAR PAGE omboka tid-->
@@ -204,9 +224,33 @@
           Du får en bekräftelse via sms eller e-post när ombokningen är klar.<br>
           Tänk på att göra det i god tid för att öka chansen att hitta en tid som passar dig.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
 
+    <!--OLIKA SJUKDOMAR PAGE-->
+    <div id="olikasjukdomar" class="page">
+      <div class="text-zoom">
+        <button class="btniconbig" onclick="makeTextLarger()">
+          <img src="icons/zoom_in_24dp_FFF_FILL0_wght400_GRAD0_opsz24.svg" ></button>
+        <button class="btniconsmall" onclick="makeTextSmaller()">
+          <img src="icons/zoom_out_24dp_FFF_FILL0_wght400_GRAD0_opsz24.svg" ></button>
+      </div>
+      <h1 class="hemText">Olika sjukdomar</h1>
+      <h2>Vanliga hälsoproblem - vad du bör veta</h2>
+      <div class="hem">
+        <div class="infoBox text-box">
+          Vanliga hälsoproblem – vad du bör veta<br>
+          I vardagen kan vi drabbas av flera olika besvär, där virus, muskelvärk, allergier och förkylningar är några av de vanligaste.          
+          Virus är små smittsamma partiklar som kan orsaka allt från milda infektioner till allvarliga sjukdomar. Exempel är influensa, magsjuka och förkylningar. De sprids lätt mellan människor, särskilt i miljöer där många vistas nära varandra.         
+          Muskelvärk uppstår ofta efter fysisk ansträngning, stress eller stillasittande, men kan också bero på infektioner. Värken känns ofta som stelhet, ömhet eller molande smärta, och går vanligtvis över av sig själv med vila och återhämtning.         
+          Allergi är en reaktion från kroppens immunförsvar mot ämnen som egentligen är ofarliga, som pollen, pälsdjur eller damm. Vanliga symtom är nysningar, rinnsnuva, kliande ögon och trötthet. Allergi kan behandlas med receptfria läkemedel och i vissa fall med vaccination.        
+          Förkylning är en vanlig virusinfektion som ger symtom som halsont, hosta, snuva och trötthet. Den går oftast över av sig själv inom en till två veckor. Vila och mycket vätska brukar vara den bästa behandlingen.       
+          Genom att känna igen symtomen och veta hur man lindrar dem kan du bättre ta hand om din hälsa i vardagen.
+        </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
+      </div>
+    </div>
     <!--OLIKA SJUKDOMAR PAGE virus-->
     <div id="virus" class="page">
       <div class="text-zoom">
@@ -226,6 +270,7 @@
           kräkningar och diarré. Virus sprids lätt genom hosta, nysningar eller kontakt med smittade ytor – därför är god 
           handhygien och vaccination viktiga skydd.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     <!--OLIKA SJUKDOMAR PAGE muskelvärk-->
@@ -244,6 +289,7 @@
           Muskelvärk är ett vanligt tillstånd som kan drabba vem som helst, oavsett ålder eller fysisk kondition. Värken kan kännas som en molande, stel eller öm känsla i en eller flera muskelgrupper, ofta efter fysisk ansträngning, stress eller långvarig stillasittande. Vanliga orsaker till muskelvärk är träning, felaktig kroppshållning, sömnbrist eller spänningar på grund av stress. Ibland kan muskelvärk också uppstå vid infektioner eller sjukdomar som influensa.
           För att lindra muskelvärk kan det hjälpa att vila, värma det ömma området, stretcha försiktigt eller ta receptfria smärtstillande läkemedel. Om värken håller i sig länge, förvärras eller kommer utan tydlig anledning, bör man kontakta vården för vidare utredning.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     <!--OLIKA SJUKDOMAR PAGE förkylning-->
@@ -262,6 +308,7 @@
           Förkylning är en av de vanligaste infektionerna i luftvägarna och orsakas av virus. Den sprids lätt genom direktkontakt eller via luften när någon nyser eller hostar. Symtomen börjar oftast med halsont, följt av nästäppa, rinnsnuva, nysningar och hosta. Man kan även känna sig trött, få huvudvärk eller en lätt feber.          
           Förkylningar går i regel över av sig själva inom en till två veckor och kräver sällan medicinsk behandling. För att lindra symtomen rekommenderas vila, mycket vätska och receptfria läkemedel som febernedsättande eller nässpray. Det är också bra att tvätta händerna ofta för att undvika att smitta andra.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     <!--OLIKA SJUKDOMAR PAGE allergi-->
@@ -282,6 +329,7 @@
           Behandlingen varierar beroende på typ av allergi. Många klarar sig bra med receptfria antihistaminer, nässpray eller ögondroppar. I vissa fall kan läkare rekommendera allergivaccination (hyposensibilisering) för långvarig lindring. Det är också viktigt att försöka undvika kontakt med det man är allergisk mot.        
           Allergi kan påverka livskvaliteten, men med rätt kunskap och behandling går det att leva ett aktivt och hälsosamt liv.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
 
@@ -295,17 +343,14 @@
           <img src="icons/zoom_out_24dp_FFF_FILL0_wght400_GRAD0_opsz24.svg" ></button>
       </div>
       <h1 class="hemText">Förnya recept</h1>
-      <h2>Just nu är det pollen-säsong</h2>
-
+      <h2>Vi hjälper dig förnya ditt recept</h2>
       <div class="hem">
         <div class="infoBox text-box">
-          Våren är här, och med den kommer också den årliga pollenallergin. Många upplever just nu besvär som rinnande näsa, kliande ögon, nysningar och trötthet – typiska symptom på allergi mot björk- eller gräspollen. Pollenhalterna är redan höga i stora delar av landet, särskilt under soliga, torra och blåsiga dagar.
-          För allergiker kan det kännas som att ha en ständig förkylning, vilket påverkar både koncentration och sömn. Det finns dock hjälp att få. Receptfria läkemedel som antihistaminer, nässprayer och ögondroppar kan lindra symtomen. För den som är extra känslig kan läkare skriva ut starkare behandling eller föreslå allergivaccination.
-          För att minska besvären rekommenderas att du:
-          Undviker att vädra på morgonen när pollennivåerna är som högst
-          Håller fönster stängda under dagtid kan också hjälpa, särskilt när det är torrt och blåsigt ute. Duscha och byt kläder efter att du varit utomhus för att få bort pollen som fastnat i håret och på huden. Torka inte kläder eller sängkläder utomhus under pollensäsongen, eftersom pollen lätt fastnar i tyget.
-          Många upplever även att det hjälper att följa pollenprognoser och anpassa aktiviteter därefter. Genom att vara förberedd och ta förebyggande åtgärder kan du göra vardagen lite lättare under den här besvärliga tiden på året.
+          Att förnya ett recept via Vårdkompassen är enkelt och smidigt. Du loggar bara in med ditt BankID på vår plattform, går till sidan "Förnya recept", och väljer det läkemedel du vill förnya. Du kan även lämna en kommentar till vårdpersonalen om du har frågor eller vill förklara varför du behöver en ny förskrivning.
+          Efter att din begäran skickats in granskas den av en läkare. När receptet är godkänt skickas det elektroniskt till ditt valda apotek, och du får en bekräftelse via sms eller e-post. I vissa fall kan vårdpersonalen behöva kontakta dig innan receptet kan förnyas.         
+          Tjänsten är tillgänglig dygnet runt – så att du kan hantera dina recept när det passar dig bäst.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
 
@@ -318,7 +363,7 @@
           <img src="icons/zoom_out_24dp_FFF_FILL0_wght400_GRAD0_opsz24.svg" ></button>
       </div>
       <h1 class="hemText">Skaffa läkarintyg</h1>
-      <h2>Denna sida hjälper dig skaffa läkarintyg</h2>
+      <h2>Vi hjälper dig att skaffa läkarintyg</h2>
       <div class="hem">
         <div class="infoBox text-box">
           I vissa situationer kan du behöva ett läkarintyg – till exempel vid sjukskrivning, förlängd sjukfrånvaro, ansökan om anpassningar i arbete eller skola, eller inför en resa. Att skaffa ett läkarintyg är enkelt hos oss på årdkompassen.<br>
@@ -326,6 +371,7 @@
           När intyget är klart får du det antingen direkt i handen, via e-post, eller genom att logga in på Vårdkompassen. Läkarintyget kan du sedan själv skicka till din arbetsgivare, skola eller annan instans som begärt det.<br>
           Kom ihåg att vara ute i god tid, särskilt om intyget behövs inför en deadline – och att alltid ta med legitimation vid ditt besök.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
 
@@ -349,6 +395,7 @@
           Oavsett vilken vårdcentral du väljer är vårt mål detsamma – att ge dig trygg och tillgänglig vård med hög kvalitet. Du kan enkelt boka tid, förnya recept eller kontakta oss digitalt via vår hemsida, oavsett var du befinner dig.<br>          
           Vi ser fram emot att få hjälpa dig, var du än är! 💙
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     <!--VÅRA VÅRDCENTRALER PAGE skövde-->
@@ -369,6 +416,7 @@
           På Vårdkompassen i Skövde sätter vi patienten i centrum. Vår ambition är att du ska känna dig sedd, hörd och väl omhändertagen.<br>         
           Varmt välkommen in till oss!
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     <!--VÅRA VÅRDCENTRALER PAGE göteborg-->
@@ -389,6 +437,7 @@
           På Vårdkompassen i Göteborg sätter vi patienten i centrum. Vår ambition är att du ska känna dig sedd, hörd och väl omhändertagen.<br>         
           Varmt välkommen in till oss!
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     <!--VÅRA VÅRDCENTRALER PAGE stockholm-->
@@ -409,6 +458,7 @@
           På Vårdkompassen i Stockholm sätter vi patienten i centrum. Vår ambition är att du ska känna dig sedd, hörd och väl omhändertagen.<br>         
           Varmt välkommen in till oss!
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     <!--VÅRA VÅRDCENTRALER PAGE malmö-->
@@ -429,6 +479,7 @@
           På Vårdkompassen i Malmö sätter vi patienten i centrum. Vår ambition är att du ska känna dig sedd, hörd och väl omhändertagen.<br>         
           Varmt välkommen in till oss!
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
 
@@ -454,6 +505,7 @@
           Skicka ett mejl till oss om du har frågor som inte är brådskande. Vi återkommer så fort vi kan, oftast inom 24 timmar på vardagar.<br>
           Vi finns här för att göra din kontakt med vården enkel och trygg – hör av dig när du behöver oss!
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     <!--KONTAKT PAGE mail-->
@@ -470,6 +522,7 @@
         <div class="infoBox text-box">
           Du kan enkelt kontakta oss via mail om ditt ärende inte är brådskande. Skriv din fråga eller beskriv ditt ärende, så återkommer vi så snart som möjligt – oftast inom 24 timmar på vardagar. Mail är ett smidigt sätt att få hjälp i lugn och ro.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     <!--KONTAKT PAGE chatta-->
@@ -486,6 +539,7 @@
         <div class="infoBox text-box">
           Via vår chatt får du snabb hjälp direkt från vår personal. Tjänsten är bemannad under vardagar mellan kl. 07.00 och 18.00. Du kan ställa frågor, få rådgivning eller hjälp med bokningar – allt i realtid. Perfekt när du vill ha svar snabbt utan att ringa!
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
     <!--KONTAKT PAGE telefon-->
@@ -502,6 +556,7 @@
         <div class="infoBox text-box">
           Du kan alltid nå oss via telefon för rådgivning, tidsbokning eller andra frågor. Våra telefontider är vardagar mellan kl. 07.00 och 18.00. När du ringer får du prata direkt med vår kunniga personal som hjälper dig vidare utifrån ditt ärende.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
 
@@ -520,6 +575,7 @@
           Vårdkompassen är en digital vårdtjänst som gör det enkelt för dig att få kontakt med vården – när det passar dig. Vi brinner för att göra vården tillgänglig, trygg och smidig för alla. Genom vår plattform kan du boka tider, förnya recept, läsa om vanliga sjukdomar och få hjälp via telefon, chatt eller mail.<br>
           Bakom Vårdkompassen finns ett team av legitimerad vårdpersonal, tekniker och administratörer som tillsammans arbetar för att ge dig bästa möjliga service – oavsett om du bor i Skövde, Göteborg, Stockholm eller Malmö. Vi kombinerar modern teknik med personlig omsorg, och sätter alltid patientens behov i första rummet.
         </div>
+        <img id="bild" src="icons/IMG_2878.PNG">
       </div>
     </div>
 
