lagt in mätskriptet

--- a/basline/baseline.html
+++ b/basline/baseline.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="baselinestyle.css"/>
   </head>
 
-  <body onload="setupHistory(); showpage('hem', false); checkLocalStorage();">
+  <body onload="setupHistory(); showpage('hem', false);">
     <script src="baseline.js"></script>
 
     <!--BANNER-->
